--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,16 @@
+/* @font-face { 
+    font-family: Girassol-Regular;
+    src: url(../fonts/Girassol-Regular);
+ } */
+
+ * {
+    margin: 0;
+    padding: 0;
+    font-family: 'Girassol', cursive;
+    /*font-family: 'Indie Flower', cursive;*/
+    /*font-family: 'Risque', cursive;*/
+}
+
 html,
 body {
     margin: 0;
@@ -13,4 +26,101 @@ body {
     display: flex;
     justify-content: center;
     align-content: center;
+}
+
+#login {
+    display: none;
+    font-size: 1em;
+    border: none;
+    right: 0%;
+    /* bottom: -70%; */
+    background: transparent;
+    font-weight: bold;
+    /* position: absolute; */
+    color: white;
+}
+
+#play{
+    /* width: 100vw;
+    height: 100vh;
+    background: black; */
+    z-index: 2;
+    position: relative;
+    color: white;
+    font-size: 3em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#wrapper input:not(#go) {
+    padding: .5rem 1rem;
+    font-size: 1.25rem;
+    line-height: 1.5;
+    /* border-radius: .3rem; */
+    display: none;
+    width: 100%;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+    overflow: visible;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+#go {
+    display: none;
+    background: transparent;
+    color: white;
+    font-size: 3em;
+    border: none;
+    right: 0%;
+    /* bottom: -50%; */
+    font-weight: bold;
+    /* position: absolute; */
+}
+
+#login {
+    display: none;
+    font-size: 1em;
+    border: none;
+    right: 0%;
+    /* bottom: -70%; */
+    background: transparent;
+    font-weight: bold;
+    /* position: absolute; */
+    color: white;
+}
+
+#register {
+    display: none;
+    font-size: 1em;
+    border: none;
+    right: 0%;
+    bottom: -95%;
+    background: transparent;
+    font-weight: bold;
+    /* position: absolute; */
+    color: white;
+}
+
+#wrapper {
+    box-sizing: border-box;   
+    display: block;
+    position: absolute;
+    top: 30%;
+    /* left: 50%; */
+    /* transform: translate(-50%, -55%); */
+    width: 288px;
+    height: 128px;
+    opacity: 1;
+    pointer-events: none;
+    margin: 0 auto;
+    z-index: 5555;
+    left: 50%;
+    top: 25%;
+    transform: translate(-50%, -25%);
 }
