--- a/src/index.ejs
+++ b/src/index.ejs
@@ -18,11 +18,11 @@
 	<link href="https://fonts.googleapis.com/css?family=Risque&display=swap" rel="stylesheet">
 </head>
 
-<body>
-	<noscript>Please enable JavaScript in your web browser to view this page.</noscript>
+<body style="display: none;">
 	<div id="pixi-content"><canvas id="pixi-canvas" /></div>
 	<form id="wrapper" class="col-8">
-		<input id="username" class="form-control form-control-lg mb-1" type="text" placeholder="Username" autocomplete="on">
+		<input id="username" class="form-control form-control-lg mb-1" type="text" placeholder="Username"
+			autocomplete="on">
 		<input id="password" class="form-control form-control-lg" type="password" placeholder="Password"
 			autocomplete="on">
 		<button type="button" id="go" class="ml-auto">Go</button>
