--- a/src/index.ejs
+++ b/src/index.ejs
@@ -30,15 +30,15 @@
 		<button type="button" id="register" class="ml-auto">Register</button>
 	</form>
 	<script>
-		// window.addEventListener("error", handleError, true);
-		// function handleError(evt) {
-		// 	// alert msg for mobile debug
-		// 	if (evt.message) { // Chrome sometimes provides this
-		// 		alert("error: " + evt.message + " at linenumber: " + evt.lineno + " of file: " + evt.filename);
-		// 	} else {
-		// 		alert("error: " + evt.type + " from element: " + (evt.srcElement || evt.target));
-		// 	}
-		// }
+		window.addEventListener("error", handleError, true);
+		function handleError(evt) {
+			// alert msg for mobile debug
+			if (evt.message) { // Chrome sometimes provides this
+				alert("error: " + evt.message + " at linenumber: " + evt.lineno + " of file: " + evt.filename);
+			} else {
+				alert("error: " + evt.type + " from element: " + (evt.srcElement || evt.target));
+			}
+		}
 	</script>
 </body>
 
