matching block animation added, points after match have sprite to indecate wheter it is a defence or attack, and move from the place of match to card that increases their points

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,6 @@
 /* @font-face { 
     font-family: Girassol-Regular;
-    src: url(../fonts/Girassol-Regular);
+    src: url(../../static/fonts/Girassol-Regular.ttf);
  } */
 
  * {
